@@ -1,3 +1,4 @@
 EBUILD cds-meta-10.4-r1.ebuild 3783 RMD160 e894cf6fb4433dbf7861bf6ae88dff869e4b0d84 SHA1 caee05c02177b10a4986d3960cbcfbf0eb305783 SHA256 9193d0b521747a3ac4cea53d9826bb654e66587e39db6485ca4f5382fdeae668
-MISC ChangeLog 1167 RMD160 eaf8a78d3c26ffedd62626beab4fd62269289e5b SHA1 fa01ad355ce8a6024482eb236f52b8258887b6ab SHA256 551985a45f0da7b78188f2a7082a05db1bc4724689d70cbcd8aa2af2885742ba
+EBUILD cds-meta-10.999.ebuild 3617 RMD160 7d58a0bd53daf1d4cbf99f9deeda161b90436019 SHA1 e012c87c8b7a38300d4a8e7c33f05325921212a7 SHA256 3106ec14e7809dd713afcab42d52d8d0f7d33a23ab2b85c936e8e6d2c920a4da
+MISC ChangeLog 1307 RMD160 2f4bc085812c6544f58b6e35735c4b2d4e5e3416 SHA1 6def3cceffc34ff9aa4509de85f7b41065742aeb SHA256 c2da50d12a7dd692815eccb9c70342926f76db8852ee59e41490457be1940936
 MISC metadata.xml 260 RMD160 6945f0c9b210fe3068c6e5a6f7d5071cf9043369 SHA1 49f5ce48babea34bb39ff3f0d9d7c3adf9665da2 SHA256 74bbb85f1ec54eab72a905a78ffd5ac51bc7c3f64e9731418aa68f773d2bfba8
