@@ -1,2 +1,2 @@
-EBUILD cl-decoration-meta-11.0.ebuild 859 RMD160 46dba8e9737fd4b8f74286ac148ca5c9d4f07f89 SHA1 73b173e84e1c3d600882a83f237ad5de3c435c64 SHA256 315e6784441e87c9fc2b13b39c283141e074ff29dbf02b0f437296dda7477c3d
+EBUILD cl-decoration-meta-11.0.ebuild 911 RMD160 3a23ce3fa8c5d78321ed1a28f0b3e4cd8d35fd1b SHA1 3cb7dddbc7d34c5e5e550390137423bf29195784 SHA256 881e96aa66d70f7e6a8995169a5bd1f39f6432afbec52ca2a23cea4aa41b2ed0
 MISC ChangeLog 309 RMD160 ce2927120ac02525149017e45ff2721e75f1605b SHA1 4361d7c622edcb54b930ab50d3fe43c0e34946e1 SHA256 9dc01b67c1248407b208cb7e6fbba9278ae694defc39a7b71b62d0ac2cb1f8a9
