@@ -11,11 +11,31 @@ SRC_URI=""
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="amd64 x86"
-IUSE="distro_CLD distro_CLDG distro_CLDX"
+IUSE="distro_CDS distro_CLD distro_CLDG distro_CLDX"
 
 RDEPEND="
 	net-dns/bind-tools
 	net-misc/ntp
+
+	distro_CDS? (
+		net-analyzer/fail2ban
+		net-analyzer/ipcad
+		net-analyzer/iptraf
+		net-analyzer/macchanger
+		net-analyzer/nmap
+		net-analyzer/sarg
+		net-analyzer/tcpdump
+		net-analyzer/traceroute
+		net-analyzer/vnstat
+		net-dialup/freeradius
+		net-dialup/minicom
+		net-dialup/ppp
+		net-dialup/pptpclient
+		net-dialup/pptpd
+		net-dialup/rp-pppoe
+		net-dialup/xl2tpd
+		net-dns/ddclient
+	)
 
 	distro_CLD? (
 		net-misc/kvpnc
