@@ -13,8 +13,9 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="amd64 x86"
 IUSE="calculate_nokde calculate_nodecoration calculate_nographics
-calculate_nomultimedia calculate_nonetwork calculate_nonettools
-calculate_noprinter calculate_nooffice calculate_nowireless"
+calculate_nokernel calculate_nomultimedia calculate_nonetwork
+calculate_nonettools calculate_noprinter calculate_nooffice
+calculate_nowireless"
 
 RDEPEND="
 	!app-misc/cls-meta
@@ -27,33 +28,16 @@ RDEPEND="${RDEPEND}
 	app-misc/cl-base-meta
 	app-misc/cl-tools-meta
 
-	!calculate_nokde? (
-		app-misc/cl-kde-meta
-	)
-	!calculate_nodecoration? (
-		app-misc/cl-decoration-meta
-	)
-	!calculate_nographics? (
-		app-misc/cl-graphics-meta
-	)
-	!calculate_nomultimedia? (
-		app-misc/cl-multimedia-meta
-	)
-	!calculate_nonetwork? (
-		app-misc/cl-network-meta
-	)
-	!calculate_nonettools? (
-		app-misc/cl-nettools-meta
-	)
-	!calculate_noprinter? (
-		app-misc/cl-printer-meta
-	)
-	!calculate_nooffice? (
-		app-misc/cl-office-meta
-	)
-	!calculate_nowireless? (
-		app-misc/cl-wireless-meta
-	)
+	!calculate_nokde? ( app-misc/cl-kde-meta )
+	!calculate_nodecoration? ( app-misc/cl-decoration-meta )
+	!calculate_nographics? ( app-misc/cl-graphics-meta )
+	!calculate_nokernel? ( sys-kernel/calculate-sources )
+	!calculate_nomultimedia? ( app-misc/cl-multimedia-meta )
+	!calculate_nonetwork? ( app-misc/cl-network-meta )
+	!calculate_nonettools? ( app-misc/cl-nettools-meta )
+	!calculate_noprinter? ( app-misc/cl-printer-meta )
+	!calculate_nooffice? ( app-misc/cl-office-meta )
+	!calculate_nowireless? ( app-misc/cl-wireless-meta )
 "
 
 pkg_postinst() {
