@@ -1,2 +1,2 @@
-EBUILD css-meta-11.0.ebuild 894 RMD160 a1bb6260d2f4580ef31a1655e842e07eb1735b57 SHA1 955b12fd795e55108c35791889bacbd5da6573ac SHA256 38be7f73bab59b4b3ef7866efba1bae1575a8c096ef73e0e7c1fdb1afb582381
-MISC ChangeLog 1303 RMD160 8cd92f24ac8b51bc8acc099643b47cc1232f7654 SHA1 fa85bfe26b2e15eedda60d486906708cf459e2bb SHA256 0f9ae14b95d0853000c5b6b08b39326018e29c57770b4ef6f11706dc59ea28cd
+EBUILD css-meta-10.999.ebuild 967 RMD160 4104d79a3932b7e239fa58e723e36601ef4c29f5 SHA1 c255ef1654b4f8915eac1b3074ee7db196e54ad0 SHA256 685a9fe9d6d37b1c0de30864f6a3bc7e0e4fb7d2a3028824e2951933aec863e7
+MISC ChangeLog 1471 RMD160 1b2d5fb3e096c57187acd45b877f3efea1cd2862 SHA1 89a2adabb53fa47e3b9fec103e47fcb30772e18c SHA256 7295dd410f51df8679cda43968f697824a93478d948010dadcccd665d3199a92
