@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*css-meta-10.999 (18 Nov 2010)
+
+  18 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +css-meta-10.999.ebuild, -css-meta-11.0.ebuild:
+  Downgrade version
+
   13 Oct 2010; Трацевский Александр
   <atratsevskiy@gentoo.org> css-meta-10.9.ebuild:
   Removed app-misc/screen
