@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cds-meta-10.999 (18 Nov 2010)
+
+  18 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cds-meta-10.999.ebuild:
+  Version bump
+
 *cds-meta-10.4-r1 (22 Sep 2010)
 
   22 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
